<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthenticationActivity"
    android:background="#000000">

    <ImageView
        android:id="@+id/authentication_activity_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/authentication_activity_presentation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_presentation"
        app:layout_constraintTop_toBottomOf="@+id/authentication_activity_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/authentication_activity_facebook_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/authentication_activity_google_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/facebook_authentication"
        android:text="@string/facebook_authentication"/>

    <Button
        android:id="@+id/authentication_activity_google_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/google_authentication"
        android:text="@string/google_authentication"/>

</androidx.constraintlayout.widget.ConstraintLayout>