<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RestaurantDetailsActivity">

    <ImageView
        android:id="@+id/activity_details_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_details_cardview_restaurant_informations"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_details_photo"
        android:orientation="vertical"
        android:backgroundTint="@color/toolbar"
        >

        <TextView
            android:id="@+id/activity_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/details_restaurant_name"
            android:textSize="40dp"/>

        <TextView
            android:id="@+id/activity_details_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/details_restaurant_address"
            android:textSize="25dp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_restaurant_details_buttons"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_details_cardview_restaurant_informations">

        <ImageButton
            android:id="@+id/activity_restaurant_details_phone_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_details_phone_24"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"/>

        <TextView
            android:id="@+id/activity_restaurant_details_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_phone_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/details_call"
            android:textColor="@color/toolbar"
            android:textSize="25dp"
            />

        <ImageButton
            android:id="@+id/activity_restaurant_details_like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/activity_restaurant_details_phone_button"
            android:layout_marginStart="85dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_details_like_24"
            android:backgroundTint="@color/white"
            />

        <TextView
            android:id="@+id/activity_restaurant_details_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_like_button"
            app:layout_constraintStart_toEndOf="@+id/activity_restaurant_details_call"
            android:layout_marginStart="85dp"
            android:layout_marginTop="10dp"
            android:text="@string/details_like"
            android:textColor="@color/toolbar"
            android:textSize="25dp"/>

        <ImageButton
            android:id="@+id/activity_restaurant_details_website_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/activity_restaurant_details_like_button"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:src="@drawable/ic_details_public_24"
            android:backgroundTint="@color/white"
            />

        <TextView
            android:id="@+id/activity_details_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_website_button"
            app:layout_constraintStart_toEndOf="@+id/activity_restaurant_details_like"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:text="@string/details_website"
            android:textColor="@color/toolbar"
            android:textSize="25dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/activity_details_photo"
        app:layout_constraintBottom_toBottomOf="@+id/activity_details_photo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"

        />
</androidx.constraintlayout.widget.ConstraintLayout>